--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "jspm": {
     "dependencies": {
+      "immutable": "npm:immutable@^3.6.2",
       "jsonp": "npm:jsonp@^0.1.0",
       "mori": "npm:mori@^0.3.2"
     }
