--- a/package.json
+++ b/package.json
@@ -1,8 +1,32 @@
 {
+  "name": "es6-live",
+  "version": "0.2.0",
+  "description": "Minimal Setup for ES6",
+  "author": "Priyatam Mudivarti <priyatam@gmail.com> (http://priyatam.com/)",
+  "license": "MIT",
+  "main": "index.js",
+  "dependencies": {
+    "mori": "^0.3.2"
+  },
+  "devDependencies": {
+    "babel": "^5.5.5",
+    "babelify": "^6.1.2",
+    "watchify": "^3.2.2"
+  },
+  "scripts": {
+    "prestart": "npm install",
+    "build": "watchify lib/main.js -v -t babelify -o bundle.js",
+    "server": "live-server",
+    "start": "npm run build & npm run server"
+  },
   "jspm": {
     "dependencies": {
-      "immutable": "npm:immutable@^3.6.2",
       "mori": "npm:mori@^0.3.2"
+    },
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.1.13",
+      "babel-runtime": "npm:babel-runtime@^5.1.13",
+      "core-js": "npm:core-js@^0.9.4"
     }
   }
 }
