--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "immutable": "^3.7.3",
+    "jsonp": "^0.2.0",
     "mori": "^0.3.2"
   },
   "devDependencies": {
